Bug 1610899 - avoid text track list being cut off, r=jaws
The text track list should not exceed the size of the video controls. Because it is positioned
absolutely, and because the height of the video is not known in the CSS, the only way to
ensure the list's height does not exceed the video's height is to set a 'top' value as well as
a 'bottom' one.

Unfortunately, that then means that if the list is quite small and the video quite tall, the
popup becomes way too large.

To avoid this, I've added another level of nesting, and used flexbox to align the actual list
to the bottom of the container for the list.

Differential Revision: https://phabricator.services.mozilla.com/D62452

--- a/toolkit/themes/shared/media/videocontrols.css
+++ b/toolkit/themes/shared/media/videocontrols.css
@@ -333,17 +333,26 @@
   background-color: #00b6f0;
 }
 
-.textTrackList {
+.textTrackListContainer {
   position: absolute;
   right: 5px;
   bottom: 45px;
+  top: 5px;
   max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.textTrackList {
+  flex: 0 1 auto;
   border: 1px solid #000000;
   border-radius: 2.5px;
   padding: 5px 0;
   vertical-align: middle;
   background-color: #000000;
   opacity: 0.7;
+  overflow-y: auto;
 }
 
 .touch .textTrackList {
